cmake_minimum_required(VERSION 3.2)
project(TLC VERSION 0.1 LANGUAGES CXX C)

include(GNUInstallDirs)

OPTION(TLC_BUILD_TEST "Build Test, or just library" ON)

SET(BUILD_SHARED_LIBS, OFF)
SET(GLFW_BUILD_EXAMPLES, OFF)
SET(GLFW_BUILD_TESTS, OFF)
SET(GLFW_BUILD_DOCS, OFF)

ADD_SUBDIRECTORY("app")

IF (TLC_BUILD_TEST)
	ADD_SUBDIRECTORY("test")
	ADD_TEST(window tlctest)
ENDIF()



set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VENDOR "thompsoninnovations.com")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${PROJECT_NAME} Installer")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_INSTALL_DIRECTORY ${PROJECT_NAME})
set(CPACK_COMPONENTS_ALL centauri)
set(CPACK_NSIS_MUI_ICON "${PROJECT_SOURCE_DIR}/resources/drakeblue.ico")

include(CPack)